# auth-service/src/main/java/com/t1/popcon/auth/token/dto/TokenRefreshResponse.java
@@ -5,6 +5,6 @@ import lombok.Builder;
 @Builder
 public record TokenRefreshResponse(
 	String accessToken,
-	String refreshToken,
 	Long expiresIn
-) {}
+) {
+}
